<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarkingActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:text="@string/page_name"
            android:textColor="#fec63d"
            android:textSize="35dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:src="@drawable/cal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/ass1"
                android:textColor="#131312"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/ass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_placeholder"
                android:inputType="number"
                android:textColor="#171615" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/ass2"
                android:textColor="#131312"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/ass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_placeholder"
                android:inputType="number"
                android:textColor="#feb63d" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/mid_marks"
                android:textColor="#191818"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/mid_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_placeholder"
                android:inputType="number"
                android:textColor="#feb63d" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/final_marks"
                android:textColor="#1E1E1E"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/final_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_placeholder"
                android:inputType="number"
                android:textColor="#feb63d" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:background="#000000"
            android:text="@string/btn_cal"
            android:textColor="#feb63d"
            android:textSize="18sp"

            android:id="@+id/btn_cal"
            />

    </LinearLayout>

</LinearLayout>